Fixed ip address Added another comment made text in person list not overflow

--- a/server/frontend.css
+++ b/server/frontend.css
@@ -40,3 +40,7 @@ hr {
 .delete-btn {
     margin-top: 10px;
 }
+
+.name, .age, .eye-color {
+    overflow: hidden;
+}
